--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ PAYLOAD_SECRET=djgfiueriogt548695ythgkfhgkdf
 MONGODB_URL=mongodb+srv://digistore-user:0sQ2t8F9x1KtqdIj@cluster0.ulnoerh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+RESEND_API_KEY=re_3taYcjSv_4VgQNuLrqHxZhbiMMQvCNV5k
