--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
+    "swiper": "^11.1.10",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "webpack": "5.93.0",
