--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "payload": "^2.0.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.48.2",
     "resend": "^2.0.0",
     "sonner": "^1.2.0",
