--- a/package.json
+++ b/package.json
@@ -61,10 +61,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/express-fileupload": "^1.5.1",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
+    "@types/passport": "^1.0.16",
     "@types/react": "^18",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.0.1",
     "copyfiles": "^2.4.1",
     "eslint": "^8",
